--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
+    "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
+    "firebase": "^9.12.1",
     "html-react-parser": "^3.0.4",
     "next": "12.3.1",
+    "next-auth": "^4.14.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.15.1",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.4"
   },
   "devDependencies": {
     "eslint": "8.25.0",
