--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.9",
-<<<<<<< HEAD
     "@mui/styled-engine-sc": "^5.10.6",
-=======
     "@reduxjs/toolkit": "^1.8.6",
->>>>>>> 24d9d554c8abe46eb40e5f924c8b25639be0b950
     "axios": "^1.1.3",
     "firebase": "^9.12.1",
     "html-react-parser": "^3.0.4",
@@ -28,11 +25,8 @@
     "react-dom": "18.2.0",
     "react-modal": "^3.15.1",
     "react-quill": "^2.0.0",
-<<<<<<< HEAD
+    "react-redux": "^8.0.4",
     "styled-components": "^5.3.6"
-=======
-    "react-redux": "^8.0.4"
->>>>>>> 24d9d554c8abe46eb40e5f924c8b25639be0b950
   },
   "devDependencies": {
     "eslint": "8.25.0",
