--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^5.10.9",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "firebase": "^9.12.1",
     "html-react-parser": "^3.0.4",
+    "mongodb": "^4.11.0",
     "next": "12.3.1",
     "next-auth": "^4.14.0",
     "react": "18.2.0",
