--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "firebase": "^9.12.1",
     "html-react-parser": "^3.0.4",
@@ -24,6 +25,8 @@
     "next": "12.3.1",
     "next-auth": "^4.14.0",
     "react": "18.2.0",
+    "react-big-calendar": "^1.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.15.1",
     "react-quill": "^2.0.0",
